--- a/pivot-and-drill/dx/src/styles.css
+++ b/pivot-and-drill/dx/src/styles.css
@@ -1,3 +1,10 @@
-#sales {
-    margin: 20px 0;
+
+.centre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonAreaMargins {
+	margin: 10px;
 }
