--- a/pivot-drilldown-and-plot/src/styles.css
+++ b/pivot-drilldown-and-plot/src/styles.css
@@ -1,4 +1,3 @@
-
 .centre {
   display: flex;
   justify-content: center;
@@ -12,4 +11,25 @@
 .title {
   text-align: center;
   line-height: 60%;
+}
+
+.banner-title {
+    display: flex;
+    align-items: center;
+    margin: 3px;
+    color: #fff;
+    background-color: #788585;
+}
+.banner-title h2 {
+    text-align: center;
+    align-items: center;
+}
+.banner-title h1 {
+    font-size: 26px;
+    font-family: 'Alegreya';
+}
+.banner-title img {
+    max-height: 64px;
+    width: auto;
+    padding: 3px;
 }
